commit #5. fixed and styled the navigation menu bar. corrected and aligned various other elements for desktop version.

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,8 @@ a,
 ul {
   text-decoration: none;
   list-style-type: none;
+  color: #222222;
+  padding: 0.5em;
 }
 
 ul {
@@ -70,6 +72,12 @@ label {
   justify-content: space-between;
 }
 
+.navbar__list-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 .navbar__hamburger {
   display: flex;
   flex-direction: column;
@@ -88,6 +96,17 @@ label {
   margin-right: 0.25em;
   padding-left: 0.5em;
   font-weight: 900;
+}
+
+.gradient-text {
+  background-image: linear-gradient(-45deg, #ab00ff, #007bff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  /* margin: auto; */
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .features__card img {
@@ -116,19 +135,8 @@ label {
   margin: auto;
 }
 
-.gradient-text {
-  background-image: linear-gradient(-45deg, #ab00ff, #007bff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
-  margin: auto;
-  font-size: 1.5rem;
-  text-align: center;
-}
-
 .products {
-  width: 100%;
+  width: 90%;
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
@@ -136,7 +144,7 @@ label {
 
 .products__logo-container {
   display: grid;
-  width: 90%;
+  width: 100%;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-areas:
@@ -210,6 +218,19 @@ label {
   width: 45%;
 }
 
+.navbar__list-button {
+  background-image: linear-gradient(-120deg, #ab00ff, #007bff);
+  border-radius: 25px;
+}
+
+.navbar__list-button a {
+  color: #f8f8f8;
+}
+
+/* .navbar__list {
+  color: #222222;
+} */
+
 .hero-section__inboundcard {
   margin: auto;
   width: 60vw;
@@ -273,8 +294,11 @@ label {
   }
   .main-heading,
   .gradient-text {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: bold;
+  }
+  .zenith-logo {
+    width: 25%;
   }
   .navbar__list {
     display: flex;
@@ -308,18 +332,15 @@ label {
 
   .products__logo-container {
     display: grid;
-    width: 90%;
+    width: 100%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-areas: "s t a j g";
     margin-bottom: 4em;
     margin-top: 4em;
     margin: auto;
   }
+
   .footer__list {
     padding-top: 2em;
   }
-
-  /* #email input {
-    placeholder: name;
-  } */
 }
